# advent-of-code-2022

./: Cargo.toml
.cargo/: config.toml
benches/: bench_5_2.rs
data/: day1.txt
src/: lib.rs  main.rs
src/day_1/: part1.rs  part2.rs
src/day_2/: part1.rs  part2.rs
src/day_3/: part1.rs  part2.rs
src/day_4/: part1.rs  part2.rs
src/day_5/: part1.rs  part2.rs
src/day_6/: part1.rs  part2.rs
src/template/: part1.rs
src/utils/: calories.rs  crates.rs  io.rs  marker.rs  mod.rs  priorities.rs
