[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
authors = ["valonsogit"]

[dependencies]
log = {version="0.4.17", features = ["release_max_level_info"] }
env_logger = "0.10.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_5_2"
harness = false